# praktikumsplaner

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
assets/: index.css
components/: combo-input.tsx  sortable.tsx  theme-select.tsx  theme.tsx  typography.tsx
components/ui/: command.tsx  input.tsx  label.tsx  popover.tsx  switch.tsx
core/: Cargo.toml
core/core/: Cargo.toml
core/examples/: test.rs
core/src/: lib.rs
crates/willi/: Cargo.toml  README.md  notitzen.org
crates/willi/examples/: parse.rs
crates/willi/src/: lib.rs
lib/: utils.ts  willi.ts
src/: App.tsx  index.css  main.rs  style.rs  worker.ts
src/blocks/: anytime.tsx  mod.rs  solution-dialog.tsx  solver-form.tsx  student-form.tsx  upload-form.tsx
src/blocks/schedule_form/: mod.rs
src/blocks/student_form/: mod.rs
src/components/: mod.rs
src/components/button/: button.css  mod.rs
src/components/card/: card.css  mod.rs
src/components/file_input/: file_input.css  mod.rs
src/components/flex/: flex.css  mod.rs
src/components/footer/: mod.rs
src/components/header/: header.css  mod.rs
src/components/icon/: mod.rs
src/components/icon_button/: icon_button.css  mod.rs
src/components/input_row/: input_row.css  mod.rs
src/components/page_container/: mod.rs  page_container.css
src/components/reorderable_list/: mod.rs  reorderable_list.css
src/components/text_input/: mod.rs  text_input.css
src/hooks/: file_upload.rs  interval.ts  mod.rs  useSolverWorker.ts
src/pages/: index.rs
willi/: Cargo.toml
willi/examples/: test.rs
willi/src/: lib.rs
