[package]
name = "praktikumsplaner"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[dependencies]
dioxus = "0.6.3"
once_cell = "1.21.3"
wasm-bindgen = "0.2.100"
willi = { path = "./crates/willi" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
