[package]
name = "planner-core"
version = "0.1.0"
edition = "2024"

[dependencies]
willi = { path = "../willi" }

console_error_panic_hook = "0.1.7"
csv = "1.3.1"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm-bindgen = "0.2"
wasm-tracing = "2.0.0"
ndarray = "0.16.1"
serde-wasm-bindgen = "0.6.5"
tracing-subscriber-wasm = "0.1.0"
web-sys = "0.3.77"


[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
comfy-table = "7.1.4"
tracing-subscriber = "0.3.19"
