[package]
name = "willi"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.3.1"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm-bindgen = "0.2"
wasm-tracing = "2.0.0"

[lib]
crate-type = ["cdylib"]
